--- a/styles.css
+++ b/styles.css
@@ -194,6 +194,10 @@ a.social:hover {
   margin-top: 8%;
   padding: 50px 0 60px;
   background: #6b4c49;
+  }
+
+iframe {
+  border: 0;
 }
 
 /* Styles for small screens */
