--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,8 @@ header {
   line-height: 1.5;
 }
 header .profile-image {
-  margin-top: 50px;
+  align-self: flex-end;
+  margin: 50px 2%;
   width: 150px;
   height: 150px;
   border-radius: 50%;
@@ -93,7 +94,7 @@ header .profile-image:hover {
   padding: 10px;
   border-radius: 5px;
   display: table;
-  margin-top: 15%;
+  margin-top: 10%;
 }
 .tag.name {
   align-self: flex-start;
@@ -107,7 +108,11 @@ header .profile-image:hover {
   margin-left: 2%;
   margin-top: 4%;
   margin-bottom: 3%;
-
+}
+.arrow {
+  width: 3%;
+  height: 3%;
+  margin: 0 auto 4%;
 }
 .card {
   margin: 30px;
@@ -200,11 +205,12 @@ iframe {
   border: 0;
 }
 
-/* Styles for small screens */
-@media screen and (max-width: 667px) {
- .youtube {
+/* Styles for smaller screens */
+@media screen and (max-width: 1150px) {
 
- }
+  .arrow {
+    display: none;
+  }
 }
 
 /* Styles for larger screens */
